added dark mode button

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src = "script.js"></script>
    
 </head>
-<body>
+<body class = "light-mode">
 <div class = "top bar">
+    <button class= "toggle-button" onclick="toggleMode()">Dark Mode</button>
     <div class = "row">
         <div class = "logo">Logo</div>
         <div class = "link" a href = "">Shortcut Boxes</div>
@@ -29,6 +31,9 @@
 
 </div>
 </div>
+
+
+
     
 </body>
 </html>
